Styling for lil red hearts is now available to all of App, and Footer is no longer too wide

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -120,3 +120,12 @@ input {
   margin: 5px;
   margin-bottom: 10px;
 }
+
+/* --------------------------------------------------------------------------------
+Lil hearts
+-------------------------------------------------------------------------------- */
+
+.heart {
+  color: #f4364c;
+  font-size: 1.2em;
+}
